5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4480/executions/1594_820.log
== TEST (2019-04-28 12:13:04) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 01 - Ex 10
# 20 / 05 / 2016

VALOR = input("Qual o valor do saque? ")

# Quantidade de notas de R$ 50
valor // 50 = notas_R$50

# Valor restante a ser sacado com notas menores que R$ 50
resto_R$50 = valor % 50

# Quantidade de notas de R$ 10
notas_R$10 = resto_R$50 // 10

# Valor restante a ser sacado com notas menores que R$ 50
resto_R$10 = resto_R$50 % 10

# Quantidade de notas de R$ 2
notas_R$2 = resto_R$10 // 2

print(int(notas_R$50))
print(int(notas_R$10))
print(int(notas_R$2))

-- ERROR:
File "XXXX", line 8
    valor // 50 = notas_R$50
                         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-28 14:03:35) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 01 - Ex 10
# 20 / 05 / 2016

VALOR = int(input("Qual o valor do saque? "))

# Quantidade de notas de R$ 50
valor // 50 = notas_R$50

# Valor restante a ser sacado com notas menores que R$ 50
resto_R$50 = valor % 50

# Quantidade de notas de R$ 10
notas_R$10 = resto_R$50 // 10

# Valor restante a ser sacado com notas menores que R$ 50
resto_R$10 = resto_R$50 % 10

# Quantidade de notas de R$ 2
notas_R$2 = resto_R$10 // 2

print(int(notas_R$50))
print(int(notas_R$10))
print(int(notas_R$2))

-- ERROR:
File "XXXX", line 8
    valor // 50 = notas_R$50
                         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 20:20:23) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 01 - Ex 10
# 20 / 05 / 2016

valor = int(input("Qual o valor do saque? "))

# Quantidade de notas de R$ 50
valor // 50 = notas50

# Valor restante a ser sacado com notas menores que R$ 50
resto50 = valor % 50

# Quantidade de notas de R$ 10
notas10 = resto50 // 10

# Valor restante a ser sacado com notas menores que R$ 50
resto10 = resto50 % 10

# Quantidade de notas de R$ 2
notas2 = resto10 // 2

print(int(notas50))
print(int(notas10))
print(int(notas2))

-- ERROR:
File "XXXX", line 8
    valor // 50 = notas50
    ^
SyntaxError: can't assign to operator
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 20:26:56) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 01 - Ex 10
# 20 / 05 / 2016

valor = int(input("Qual o valor do saque? "))

# Quantidade de notas de R$ 50
cem = int(valor/100)

# Valor restante a ser sacado com notas menores que R$ 50
resto50 = valor % 50

# Quantidade de notas de R$ 10
notas10 = resto50 // 10

# Valor restante a ser sacado com notas menores que R$ 50
resto10 = resto50 % 10

# Quantidade de notas de R$ 2
notas2 = resto10 // 2

print(int(notas50))
print(int(notas10))
print(int(notas2))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 22, in <module>
    print(int(notas50))
NameError: name 'notas50' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 20:28:13) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 01 - Ex 10
# 20 / 05 / 2016

valor = int(input("Qual o valor do saque? "))

# Quantidade de notas de R$ 50
cem = int(valor/50)

# Valor restante a ser sacado com notas menores que R$ 50
cem = valor%50

# Quantidade de notas de R$ 10
notas10 = resto50 // 10

# Valor restante a ser sacado com notas menores que R$ 50
resto10 = resto50 % 10

# Quantidade de notas de R$ 2
notas2 = resto10 // 2

print(int(notas50))
print(int(notas10))
print(int(notas2))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 14, in <module>
    notas10 = resto50 // 10
NameError: name 'resto50' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 20:33:08) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 01 - Ex 10
# 20 / 05 / 2016

valor = int(input("Qual o valor do saque? "))

# Quantidade de notas de R$ 50
cinquenta = int(valor / 100)

# Valor restante a ser sacado com notas menores que R$ 50
cinquenta = valor % 50

# Quantidade de notas de R$ 10
dez = cinquenta / 10

# Valor restante a ser sacado com notas menores que R$ 50
resto10 = resto50 % 10

# Quantidade de notas de R$ 2
notas2 = resto10 // 2

print(int(notas50))
print(int(notas10))
print(int(notas2))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 17, in <module>
    resto10 = resto50 % 10
NameError: name 'resto50' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 20:34:58) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 01 - Ex 10
# 20 / 05 / 2016

valor = int(input("Qual o valor do saque? "))

# Quantidade de notas de R$ 50
cinquenta = int(valor / 100)

# Valor restante a ser sacado com notas menores que R$ 50
cinquenta = valor % 50

# Quantidade de notas de R$ 10
dez = cinquenta / 10

# Valor restante a ser sacado com notas menores que R$ 50
dez= dez % 10

# Quantidade de notas de R$ 2
dois = resto10 // 2

print(int(notas50))
print(int(notas10))
print(int(notas2))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 20, in <module>
    dois = resto10 // 2
NameError: name 'resto10' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 20:35:57) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 01 - Ex 10
# 20 / 05 / 2016

valor = int(input("Qual o valor do saque? "))

# Quantidade de notas de R$ 50
cinquenta = int(valor / 100)

# Valor restante a ser sacado com notas menores que R$ 50
cinquenta = valor % 50

# Quantidade de notas de R$ 10
dez = cinquenta / 10

# Valor restante a ser sacado com notas menores que R$ 50
dez= dez % 10

# Quantidade de notas de R$ 2
dois = resto10 // 2

print(int(cinquenta))
print(int(dez))
print(int(dois))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 20, in <module>
    dois = resto10 // 2
NameError: name 'resto10' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 20:36:29) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 01 - Ex 10
# 20 / 05 / 2016

valor = int(input("Qual o valor do saque? "))

# Quantidade de notas de R$ 50
cinquenta = int(valor / 100)

# Valor restante a ser sacado com notas menores que R$ 50
cinquenta = valor % 50

# Quantidade de notas de R$ 10
dez = cinquenta / 10

# Valor restante a ser sacado com notas menores que R$ 50
dez= dez % 10

# Quantidade de notas de R$ 2
dois = dez// 2

print(int(cinquenta))
print(int(dez))
print(int(dois))

-- OUTPUT:
28
2
1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-01 20:36:38) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 01 - Ex 10
# 20 / 05 / 2016

valor = int(input("Qual o valor do saque? "))

# Quantidade de notas de R$ 50
cinquenta = int(valor / 100)

# Valor restante a ser sacado com notas menores que R$ 50
cinquenta = valor % 50

# Quantidade de notas de R$ 10
dez = cinquenta / 10

# Valor restante a ser sacado com notas menores que R$ 50
dez= dez % 10

# Quantidade de notas de R$ 2
dois = dez// 2

print(int(cinquenta))
print(int(dez))
print(int(dois))

-- EXECUTION TIME:
0.17683
-- TEST CASE 1:
---- input:
2028
---- correct output:
40
2
4
---- user output:
28
2
1
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 20:36:40) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 01 - Ex 10
# 20 / 05 / 2016

valor = int(input("Qual o valor do saque? "))

# Quantidade de notas de R$ 50
cinquenta = int(valor / 100)

# Valor restante a ser sacado com notas menores que R$ 50
cinquenta = valor % 50

# Quantidade de notas de R$ 10
dez = cinquenta / 10

# Valor restante a ser sacado com notas menores que R$ 50
dez= dez % 10

# Quantidade de notas de R$ 2
dois = dez// 2

print(int(cinquenta))
print(int(dez))
print(int(dois))

-- OUTPUT:
28
2
1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 20:36:51) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 01 - Ex 10
# 20 / 05 / 2016

valor = int(input("Qual o valor do saque? "))

# Quantidade de notas de R$ 50
cinquenta = int(valor / 100)

# Valor restante a ser sacado com notas menores que R$ 50
cinquenta = valor % 50

# Quantidade de notas de R$ 10
dez = cinquenta / 10

# Valor restante a ser sacado com notas menores que R$ 50
dez= dez % 10

# Quantidade de notas de R$ 2
dois = dez// 2

print(int(cinquenta))
print(int(dez))
print(int(dois))

-- OUTPUT:
28
2
1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-01 20:36:58) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 01 - Ex 10
# 20 / 05 / 2016

valor = int(input("Qual o valor do saque? "))

# Quantidade de notas de R$ 50
cinquenta = int(valor / 100)

# Valor restante a ser sacado com notas menores que R$ 50
cinquenta = valor % 50

# Quantidade de notas de R$ 10
dez = cinquenta / 10

# Valor restante a ser sacado com notas menores que R$ 50
dez= dez % 10

# Quantidade de notas de R$ 2
dois = dez// 2

print(int(cinquenta))
print(int(dez))
print(int(dois))

-- EXECUTION TIME:
0.220394
-- TEST CASE 1:
---- input:
2028
---- correct output:
40
2
4
---- user output:
28
2
1
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-01 20:36:58) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 01 - Ex 10
# 20 / 05 / 2016

valor = int(input("Qual o valor do saque? "))

# Quantidade de notas de R$ 50
cinquenta = int(valor / 100)

# Valor restante a ser sacado com notas menores que R$ 50
cinquenta = valor % 50

# Quantidade de notas de R$ 10
dez = cinquenta / 10

# Valor restante a ser sacado com notas menores que R$ 50
dez= dez % 10

# Quantidade de notas de R$ 2
dois = dez// 2

print(int(cinquenta))
print(int(dez))
print(int(dois))

-- EXECUTION TIME:
0.147358
-- TEST CASE 1:
---- input:
2028
---- correct output:
40
2
4
---- user output:
28
2
1
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
